# gif-wallpaper-GUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gif-wallpaper-gui_ru_RU.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
installer/: README  release.bat
installer/config/: config.xml
